[RESTEASY-2656] Testing